fix: mdx content overflow

--- a/src/theme/DocPage/Layout/Main/styles.module.scss
+++ b/src/theme/DocPage/Layout/Main/styles.module.scss
@@ -25,6 +25,7 @@
 
 .docItemWrapper {
   width: 100%;
+  min-width: 0;
 }
 
 @media (min-width: 997px) {
